Added in Styling

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cat Collector</title>
-</head>
-<body>
-    <h1>About the House</h1>
-    <hr />
-    <p>Not For Sale</p>
-    <footer>All Rights Reserved, &copy; 2019 Aleph Null Vacations</footer>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+<h1>About My Vacation</h1>
+<hr />
+<p>Do your own Dishes while I'm gone.</p>
+
+{% endblock %}
