--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cat Collector</title>
-</head>
-<body>
-    <h1>Home</h1>
-    <hr />
-    <p>Honey, I'm home!</p>
-    <footer>All Rights Reserved, &copy; 2019 Aleph Null Vacations</footer>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+
+<h1>Home</h1>
+<hr />
+<p>Honey, I'm going on Vacation</p>
+
+{% endblock %}
