--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,7 +21,9 @@
           {% if user.is_authenticated %}
           <li><a href="/about">About</a></li>
           <li><a href="/locations">View All</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
           <li><a href="{% url 'login' %}">Log In</a></li>
           {% endif %}
         </ul>
