--- a/main_app/templates/locations/index.html
+++ b/main_app/templates/locations/index.html
@@ -5,7 +5,8 @@
 {% for location in locations %}
     <div class="card">
         <div class="card-content">
-            <span class="card-title">{{ location.name }}</span>
+          <span class="card-title"><a href="{% url 'detail' location.id %}">{{ location.name }}</a></span>
+          
     </div>
   </a>
 {% endfor %}
