--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,7 @@
         <ul class="right">
           {% if user.is_authenticated %}
           <li><a href="/about">About</a></li>
+          <li><a href="{% url 'locations_create' %}">New Spot</a></li>
           <li><a href="/locations">View All</a></li>
           <li><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
