--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -20,5 +20,31 @@
     </div>
   </div>
 </div>
-
+  <div class="col6">
+    <form action="{% url 'add_review' location.id %}" method="POST">
+      {% csrf_token %}
+      {{ review_form.as_p }}
+      <input type="submit" class="btn" value="Add Review">
+    </form>
+    <table class="striped">
+      <thead>
+          <tr>
+              <th>Rating</th>
+              <th>Review</th>
+          </tr>
+      </thead>
+      <tbody>
+          {% for review in location.review_set.all %}
+          <tr>
+              <td>{{review.rating}}</td>
+              <td>{{review.content}}</td>
+          </tr>
+          {% endfor %}
+      </tbody>
+  </table>
+  </div>
+<script>
+  const selectEl = document.getElementById('id_rating');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
