--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Location Details</h1>
+<h1><span style="color: #F25E68;">{{location.name}}</span> Details</h1>
 
 <div class="row">
-  <div class="col s6">
+  <div class="col">
     <div class="card">
       <div class="card-content">
         <span class="card-title">{{ location.name }}</span>
@@ -20,12 +20,14 @@
     </div>
   </div>
 </div>
-  <div class="col6">
+  <div>
     <form action="{% url 'add_review' location.id %}" method="POST">
       {% csrf_token %}
       {{ review_form.as_p }}
       <input type="submit" class="btn" value="Add Review">
     </form>
+  </div>
+  <div>
     <table class="striped">
       <thead>
           <tr>
@@ -43,6 +45,7 @@
       </tbody>
   </table>
   </div>
+
 <script>
   const selectEl = document.getElementById('id_rating');
   M.FormSelect.init(selectEl);
