--- a/main_app/templates/main_app/location_confirm_delete.html
+++ b/main_app/templates/main_app/location_confirm_delete.html
@@ -8,6 +8,6 @@
   <form action="" method="POST">
     {% csrf_token %}
     <input type="submit" value="Delete" class="btn">
-    <a href="{% url 'detail' cat.id %}">Cancel</a>
+    <a href="{% url 'detail' location.id %}">Cancel</a>
   </form>
 {% endblock %}
