--- a/main_app/templates/main_app/review_form.html
+++ b/main_app/templates/main_app/review_form.html
@@ -9,4 +9,8 @@
     <input type="submit" value="Post" class="btn">
   </form>
 
+<script>
+const selectEl = document.getElementById('id_rating');
+M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
