--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -4,61 +4,62 @@
 <h1>Location Details</h1>
 
 <div class="row">
-  <div class="col s6">
-    <div class="card">
-      <div class="card-content">
-        <span class="card-title">{{ location.name }}</span>
-        <p>Country: {{ location.country }}</p>
-        <p>City: {{ location.city }}</p>
-        <p>Latitude: {{ location.latitude }}</p>
-        <p>Longitude: {{ location.longitude }}</p>    
-      </div>
-      <div class="card-action">
-      <a href="{% url 'locations_update' location.id %}">Update</a>
-      <a href="{% url 'locations_delete' location.id %}">Delete</a>
-      </div>
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ location.name }}</span>
+                <p>Country: {{ location.country }}</p>
+                <p>City: {{ location.city }}</p>
+                <p>Latitude: {{ location.latitude }}</p>
+                <p>Longitude: {{ location.longitude }}</p>
+                <p>Average Score: {{ average }}/ 5</p>
+            </div>
+            <div class="card-action">
+                <a href="{% url 'locations_update' location.id %}">Update</a>
+                <a href="{% url 'locations_delete' location.id %}">Delete</a>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
-  <div class="col6">
+<div class="col6">
     <form action="{% url 'add_review' location.id %}" method="POST">
-      {% csrf_token %}
-      {{ review_form.as_p }}
-      <input type="submit" class="btn" value="Add Review">
+        {% csrf_token %}
+        {{ review_form.as_p }}
+        <input type="submit" class="btn" value="Add Review">
     </form>
     <table class="striped">
-      <thead>
-          <tr>
-              <th>Rating</th>
-              <th>Review</th>
-              <th>Edit</th>
-              <th>Delete</th>
-          </tr>
-      </thead>
-      <tbody>
-          {% for review in location.review_set.all %}
-          <tr>
-              <td>{{review.rating}}</td>
-              <td>{{review.content}}</td>
-              <td>
-                <form action="{% url 'update_review' review.id %}" method="POST">
-                  {% csrf_token %}
-                  <input type="submit" class="btn" value="Edit">
-                </form>
-              </td>
-              <td>
-                <form action="{% url 'delete_review' review.id %}" method="POST">
-                  {% csrf_token %}
-                  <input type="submit" class="btn" value="X">
-                </form>
-              </td>
-          </tr>
-          {% endfor %}
-      </tbody>
-  </table>
-  </div>
+        <thead>
+            <tr>
+                <th>Rating</th>
+                <th>Review</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for review in location.review_set.all %}
+            <tr>
+                <td>{{review.rating}}</td>
+                <td>{{review.content}}</td>
+                <td>
+                    <form action="{% url 'update_review' review.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" class="btn" value="Edit">
+                    </form>
+                </td>
+                <td>
+                    <form action="{% url 'delete_review' review.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" class="btn" value="X">
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 <script>
-  const selectEl = document.getElementById('id_rating');
-  M.FormSelect.init(selectEl);
+    const selectEl = document.getElementById('id_rating');
+    M.FormSelect.init(selectEl);
 </script>
 {% endblock %}
