--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Location Details</h1>
+<h1><span style="color: #F25E68;">{{ location.name }}</span> Details</h1>
 
 <div class="row">
     <div class="col s6">
@@ -17,16 +17,30 @@
             <div class="card-action">
                 <a href="{% url 'locations_update' location.id %}">Update</a>
                 <a href="{% url 'locations_delete' location.id %}">Delete</a>
+                <hr>
+                <form action="{% url 'add_review' location.id %}" method="POST">
+                    {% csrf_token %}
+                    {{ review_form.as_p }}
+                    <input type="submit" class="btn" value="Add Review">
+                </form>
             </div>
         </div>
     </div>
+    <div class="col">
+        {% for photo in location.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+        {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+        {% endfor %}
+        <form action="{% url 'add_photo' location.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+            {% csrf_token %}
+            <input type="file" name="photo-file">
+            <br><br>
+            <input type="submit" class="btn" value="Upload Photo">
+        </form>
+    </div>
 </div>
 <div class="col6">
-    <form action="{% url 'add_review' location.id %}" method="POST">
-        {% csrf_token %}
-        {{ review_form.as_p }}
-        <input type="submit" class="btn" value="Add Review">
-    </form>
     <table class="striped">
         <thead>
             <tr>
