--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -1,9 +1,21 @@
+
+
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    
+    
+    
 }
-  
+
+div.nav-wrapper, footer.page-footer {
+    background-color: #261934;
+}
+
+ul.right > li:hover {
+    background-color: #DA2D7C;
+}
 main {
     flex: 1 0 auto;
 }
