--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load dict_key %}
 {% block content %}
 
 <h1><span style="color: #F25E68;">{{ location.name }}</span> Details</h1>
@@ -28,9 +29,9 @@
     </div>
     <div class="col">
         {% for photo in location.photo_set.all %}
-      <img class="responsive-img card-panel" src="{{photo.url}}">
+        <img class="responsive-img card-panel" src="{{photo.url}}">
         {% empty %}
-      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+        <div class="card-panel teal-text center-align">No Photos Uploaded</div>
         {% endfor %}
         <form action="{% url 'add_photo' location.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
             {% csrf_token %}
@@ -68,11 +69,9 @@
                         <input type="submit" class="btn" value="X">
                     </form>
                 </td>
-                
+
                 <td>
-                    {% for reaction in review.reaction_set.all %}
-                    <p>{{ reaction }}</p>
-                    {% endfor %}
+                    Likes: {{ count_by_review|dict_key:[review.id, 'L'] }} <br>
                 </td>
             </tr>
             {% endfor %}
