--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,14 +9,14 @@
   <title>Aleph Null Vacations</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
   <header class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;N^0&nbsp;&nbsp;</a></li>
+          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         </ul>
         <ul class="right">
           {% if user.is_authenticated %}
