--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -2,7 +2,7 @@
 {% load dict_key %}
 {% block content %}
 
-<h1><span style="color: #DA2D7C;">{{ location.name }}</span> Details</h1>
+<h1><span style="color: #DA2D7C;">{{ location.name }}</span></h1>
 
 <div class="row">
     <div class="col s6">
@@ -69,10 +69,19 @@
                         <input type="submit" class="btn" value="X">
                     </form>
                 </td>
-
                 <td>
                     Likes: {% reaction_count count_by_review review.id 'L' %} <br>
+                    <form action="{% url 'add_like' review.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" class="btn" value="Like">
+                    </form>
+                </td>
+                <td>
                     Dislikes: {% reaction_count count_by_review review.id 'D' %} <br>
+                    <form action="{% url 'add_dislike' review.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="submit" class="btn" value="Dislike">
+                    </form>
                 </td>
             </tr>
             {% endfor %}
