--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -2,7 +2,7 @@
 {% load dict_key %}
 {% block content %}
 
-<h1><span style="color: #DA2D7C;">{{ location.name }}</span> Details</h1>
+<h1><span style="color: #DA2D7C;">{{ location.name }}</span></h1>
 
 <div class="row">
     <div class="col s6">
@@ -41,9 +41,11 @@
         </form>
     </div>
 </div>
+
 <div class="col6">
     <table class="striped">
         <thead>
+            
             <tr>
                 <th>Rating</th>
                 <th>Review</th>
@@ -54,6 +56,7 @@
         </thead>
         <tbody>
             {% for review in location.review_set.all %}
+            <hr>
             <tr>
                 <td>{{review.rating}}</td>
                 <td>{{review.content}}</td>
