--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
   <title>Aleph Null Vacations</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body>
   <header class="navbar-fixed">
@@ -38,6 +38,7 @@
   </main>
   <footer class="page-footer">
     <div class="right">All Rights Reserved, &copy; 2021 Aleph Null Vacations &nbsp;</div>
+    <img src="https://i.imgur.com/AeZc014.png" width="30px"alt="">
   </footer>
 </body>
 </html>
