--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -2,7 +2,7 @@
 {% load dict_key %}
 {% block content %}
 
-<h1><span style="color: #DA2D7C;">{{ location.name }}</span></h1>
+<h1>{{ location.name }}</h1>
 
 <div class="row">
     <div class="col s6">
