--- a/main_app/templates/main_app/location_form.html
+++ b/main_app/templates/main_app/location_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Add Location</h1>
   <form action="" method="post">
     {% csrf_token %}
     <table>
