Style some more

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -3,8 +3,11 @@
 
 <h1>AlephNull Vacations</h1>
 <hr />
-<p>Aleph Null Vacations is the premiere site for Vacation Destinations. Our goal is to enable you to document, and review your vacation experiences, and give them an overall rating. Watch other people rate their experiences at the same place, and check out the spots that the world rates as the best.
-    So see the countably infinite vacation spots already posted, click here to be redirected to the list.</p>
-<img src="https://i.imgur.com/EQjotJt.jpg" id="about-banner">
+<h5 class="about_h">Development</h5>
+<p class="about">Developed over the course of a week by Henry Gilliard, Mustafa Yahya, and Zach Oandasan, leading up to project week. While discussing their plans after the course, one of them brought up that they planned to go on a weekend camping trip, but was bemoaning the lack of websites that listed good places to camp. This prompted the trio into action, and Aleph Null Vacations was born.</p>
+<h5 class="about_h">Functionality</h5>
+<p class="about">Aleph Null Vacations is the premiere site for Vacation Destinations. Our goal is to enable you to document, and review your vacation experiences, and give them an overall rating. Watch other people rate their experiences at the same place, and check out the spots that the world rates as the best.</p>
+<p class="about">To see the countably infinite vacation spots already posted, click here to be redirected to the list.</p>
+<img class="about_img" src="https://i.imgur.com/EQjotJt.jpg" id="about-banner">
 
 {% endblock %}
