--- a/main_app/templates/main_app/location_form.html
+++ b/main_app/templates/main_app/location_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Add Location</h1>
-  <form action="" method="post">
+  <form action="" method="post" style="margin: 5%;">
     {% csrf_token %}
     <table>
       {{ form.as_table }}
