--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 #about-banner {
-    display: ;
+    display: flex;
 }
 a {
     text-decoration: none;
@@ -94,4 +94,22 @@ footer.page-footer {
     max-width: 1280px;
     width: 90%;
     background-color: #99aaad24;
+}
+
+.about_h {
+    text-align: center;
+}
+
+.about {
+    margin: 10px;
+    padding: 10px;
+}
+
+.about_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    max-width: 100%;
+    height: auto;
 }
