--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -55,8 +55,8 @@
             </tr>
         </thead>
         <tbody>
-            {% for review in location.review_set.all %}
             <hr>
+            {% for review in location.review_set.all %}
             <tr>
                 <td>{{review.rating}}</td>
                 <td>{{review.content}}</td>
@@ -76,14 +76,14 @@
                     Likes: {% reaction_count count_by_review review.id 'L' %} <br>
                     <form action="{% url 'add_like' review.id %}" method="POST">
                         {% csrf_token %}
-                        <input type="submit" class="btn" value="Like" style="background-color: rgb(20, 24, 148);">
+                        <input type="submit" class="btn" value="" id="like">
                     </form>
                 </td>
                 <td>
                     Dislikes: {% reaction_count count_by_review review.id 'D' %} <br>
                     <form action="{% url 'add_dislike' review.id %}" method="POST">
                         {% csrf_token %}
-                        <input type="submit" class="btn" value="Dislike" style="background-color: red;">
+                        <input type="submit" class="btn" value="" id="dislike" >
                     </form>
                 </td>
             </tr>
