--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -3,17 +3,29 @@
 {% block content %}
 
 <h1>{{ location.name }}</h1>
-
-<div class="row">
+<div>
+    {% if location.photo_set.all|length %}
+        <div class="carousel">
+            {% for photo in location.photo_set.all %}
+                <a class="carousel-item" href="#"><img src="{{photo.url}}"></a>
+            {% endfor %}
+        </div>
+    </div>
+    {% else %}
+    <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endif %}
+<div class="col">
     <div class="col s6">
         <div class="card">
             <div class="card-content">
-                <span class="card-title">{{ location.name }}</span>
-                <p>Country: {{ location.country }}</p>
-                <p>City: {{ location.city }}</p>
-                <p>Latitude: {{ location.latitude }}</p>
-                <p>Longitude: {{ location.longitude }}</p>
-                <p>Average: {{ average }}</p>
+                <span class="card-title activator">{{ location.name }}</span>
+                
+                
+                    <p>Country: {{ location.country }}</p>
+                    <p>City: {{ location.city }}</p>
+                    <p>Latitude: {{ location.latitude }}</p>
+                    <p>Longitude: {{ location.longitude }}</p>
+                    <p>Average: {{ average }}</p>
             </div>
             <div class="card-action">
                 <a href="{% url 'locations_update' location.id %}">Update</a>
@@ -27,18 +39,18 @@
             </div>
         </div>
     </div>
-    <div class="col">
-        {% for photo in location.photo_set.all %}
-        <img class="responsive-img card-panel" src="{{photo.url}}">
-        {% empty %}
-        <div class="card-panel teal-text center-align">No Photos Uploaded</div>
-        {% endfor %}
-        <form action="{% url 'add_photo' location.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
-            {% csrf_token %}
-            <input type="file" name="photo-file">
-            <br><br>
-            <input type="submit" class="btn" value="Upload Photo">
-        </form>
+    
+    <form action="{% url 'add_photo' location.id %}" enctype="multipart/form-data" method="POST" id="submit-photo"class="card-panel">
+        {% csrf_token %}
+        <div class="file-field input-field">
+            <div class="btn">
+                <span>File</span>
+                <div><input type="file" name="photo-file" ></div>
+                <div><input type="submit" class="btn" value="Upload Photo"></div>
+            </div>
+        </div>
+    </form>
+            
     </div>
 </div>
 
@@ -92,7 +104,12 @@
     </table>
 </div>
 <script>
+    
     const selectEl = document.getElementById('id_rating');
     M.FormSelect.init(selectEl);
+    const carEl = document.querySelector('.carousel');
+    M.Carousel.init(carEl, {
+        // options
+    });
 </script>
 {% endblock %}
