--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -10,10 +10,10 @@
                 <a class="carousel-item" href="#"><img src="{{photo.url}}"></a>
             {% endfor %}
         </div>
-    </div>
     {% else %}
-    <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+        <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endif %}
+</div>
 <div class="col">
     <div class="col s6">
         <div class="card">
@@ -39,25 +39,23 @@
             </div>
         </div>
     </div>
-    
     <form action="{% url 'add_photo' location.id %}" enctype="multipart/form-data" method="POST" id="submit-photo"class="card-panel">
         {% csrf_token %}
-        <div class="file-field input-field">
-            <div class="btn">
-                <span>File</span>
-                <div><input type="file" name="photo-file" ></div>
-                <div><input type="submit" class="btn" value="Upload Photo"></div>
+        <div class="">
+            <div style="margin-bottom: 10px; display: flex; flex-direction: column;">
+                <div>
+                    <input type="file" name="photo-file">
+                </div>
+                <br><br>
+                <input type="submit" class="btn" value="Upload Photo">
             </div>
         </div>
     </form>
-            
-    </div>
 </div>
 
 <div class="col6">
     <table class="striped">
         <thead>
-            
             <tr>
                 <th>Rating</th>
                 <th>Review</th>
@@ -85,19 +83,24 @@
                     </form>
                 </td>
                 <td>
-                    Likes: {% reaction_count count_by_review review.id 'L' %} <br>
-                    <form action="{% url 'add_like' review.id %}" method="POST">
-                        {% csrf_token %}
-                        <input type="submit" class="btn" value="" id="like">
-                    </form>
+                    <div>
+                        <form action="{% url 'add_like' review.id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" class="btn" value="" id="like">
+                        </form>
+                    </div>
+                    <div>Likes: {% reaction_count count_by_review review.id 'L' %} <br></div>
                 </td>
                 <td>
-                    Dislikes: {% reaction_count count_by_review review.id 'D' %} <br>
-                    <form action="{% url 'add_dislike' review.id %}" method="POST">
-                        {% csrf_token %}
-                        <input type="submit" class="btn" value="" id="dislike" >
-                    </form>
+                    <div>
+                        <form action="{% url 'add_dislike' review.id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" class="btn" value="" id="dislike" >
+                        </form>
+                    </div>
+                    <div>Dislikes: {% reaction_count count_by_review review.id 'D' %} <br></div>
                 </td>
+                
             </tr>
             {% endfor %}
         </tbody>
