--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -141,10 +141,14 @@ footer.page-footer {
     background-color: #DA2D7C;
 }
 
+form input {
+    color: white;
+  }
+  
 .container {
     margin: 0 auto;
     max-width: 1280px;
-    width: 90%;
+    width: 80%;
     background-color: #99aaad24;
 }
 
