--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -8,6 +8,6 @@
 <h5 class="about_h">Functionality</h5>
 <p class="about">Aleph Null Vacations is the premiere site for Vacation Destinations. Our goal is to enable you to document, and review your vacation experiences, and give them an overall rating. Watch other people rate their experiences at the same place, and check out the spots that the world rates as the best.</p>
 <p class="about">To see the countably infinite vacation spots already posted, click here to be redirected to the list.</p>
-<img class="about_img" src="https://i.imgur.com/EQjotJt.jpg" id="about-banner">
+<img style="width: 30rem;"class="about_img" src="https://i.imgur.com/EQjotJt.jpg" id="about-banner">
 
 {% endblock %}
