--- a/main_app/templates/main_app/location_form.html
+++ b/main_app/templates/main_app/location_form.html
@@ -4,7 +4,7 @@
 <h1>Add Location</h1>
   <form action="" method="post" style="margin: 5%">
     {% csrf_token %}
-    <table style="background-color: #bb73f638;">
+    <table>
       {{ form.as_table }}
     </table>
     <div class="post-btn" style="display: flex;
